@@ -1,5 +1,6 @@
 0.3.1 (dev)
   Added german translation (thanks to Leon Schumacher - 42LoCo42).
+  Added support for opendoas commad in octoxbps-sudo.
   BugFix: Prefer bash shell when running actions.
   BugFix: Disable Info/Files tab refresh while typing in filter/search line edit.
 
